# aicelerate

./: .env.example  CONSTRAINT_USAGE_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/models/: ALGORITHM_IMPLEMENTATION.md  base_model.py  csp.py  model.py
app/notebooks/: csp_modelling.ipynb  csp_orsat.ipynb  output.json  results.json
app/routes/: admin_routes.py  auth_routes.py  batches_routes.py  classroom_routes.py  generate_timetable_routes.py  lecturer_routes.py  settings_routes.py  subject_routes.py  tagging_routes.py
app/static/css/: Landing.css  Tagging-universal.css  admin.css  classroom.css  darkmode.css  dashboard.css  generate_timetable.css  header.css  lecturer.css  login.css  login_admin.css  settings.css  sidebar.css  subject.css
app/static/js/: Landing.js  admin.js  classroom.js  dashboard.js  generate_timetable.js  header.js  lecturer.js  login.js  login_admin.js  settings.js  sidebar.js  subject.js  tagging_universal.js  theme.js
app/templates/: Landing.html  _header.html  _sidebar.html  admin.html  batches.html  classroom.html  dashboard.html  generate_timetable.html  help_support.html  lecturer.html  login.html  login_admin.html  result.html  settings.html  subject.html  tagging_universal.html  timetable_result.html
app/utils/: logger.py
tests/: test_data.json  test_data2.json  test_model.py  test_model2.py
