[project]
name = "aicelerate"
version = "0.1.0"
description = "AI-powered University Timetable Scheduling System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==2.2.5",
    "gunicorn==20.1.0",
    "python-dotenv==1.0.0",
    "flask-sqlalchemy==2.5.1",
    "flask-migrate==3.1.0",
    "flask-login==0.6.3",
    "flask-bcrypt==1.0.1",
    "flask-restful==0.3.10",
    "sqlalchemy==1.4.49",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "flask-cors>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "coverage==7.4.3",
    "black==24.3.0",
    "flake8==7.0.0",
    "setuptools>=79.0.1",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
